Missed Title and Encoding
Added a title tag and encoding type.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
   <head>
+    <title>Rock, Paper, Scissors</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="styles/vendor/font-awesome.min.css">
     <link rel="stylesheet" href="styles/app.css">
   </head>
@@ -28,7 +30,6 @@
       <small class="result"></small>
 
     </div>
-
 
     <script src="app.js"></script>
   </body>
